--- a/LoginSignUp/app/src/main/res/layout/activity_otp.xml
+++ b/LoginSignUp/app/src/main/res/layout/activity_otp.xml
@@ -76,43 +76,19 @@
 
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/editText5"
-                android:layout_width="53dp"
-                android:layout_height="50dp"
+                android:layout_width="210dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="85dp"
                 android:layout_marginTop="50dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <EditText
-                android:id="@+id/editText7"
-                android:layout_width="53dp"
-                android:layout_height="50dp"
-
-                android:layout_marginTop="50dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <EditText
-                android:id="@+id/editText6"
-                android:layout_width="53dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="50dp"
-
-
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <EditText
-                android:layout_width="53dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="50dp"
-
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
         </LinearLayout>
 
         <Button
+            android:id="@+id/submit"
             android:layout_width="208dp"
             android:layout_height="51dp"
             android:layout_marginTop="1dp"
@@ -144,6 +120,7 @@
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
 
     <TextView
+        android:visibility="invisible"
         android:id="@+id/textView6"
         android:layout_width="269dp"
         android:layout_height="43dp"
