--- a/LoginSignUp/app/src/main/res/layout/activity_signup.xml
+++ b/LoginSignUp/app/src/main/res/layout/activity_signup.xml
@@ -44,12 +44,13 @@
         android:background="@drawable/roundtopright"
         android:drawableLeft="@drawable/ic_person_outline_black_24dp"
         android:ems="10"
+        android:hint="User Name"
         android:inputType="textPersonName"
-        android:text=" User Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
+        android:id="@+id/button10"
         android:layout_width="47dp"
         android:layout_height="44dp"
         android:layout_marginTop="144dp"
@@ -67,9 +68,9 @@
         android:background="@drawable/roundbottomright"
         android:drawableLeft="@drawable/ic_local_phone_black_24dp"
         android:ems="10"
+        android:hint="Mobile"
         android:inputType="phone"
         android:paddingLeft="5dp"
-        android:text="Mobile "
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.018"
         app:layout_constraintStart_toStartOf="parent"
