--- a/GithubFollowers/app/src/main/res/layout/recycler.xml
+++ b/GithubFollowers/app/src/main/res/layout/recycler.xml
@@ -9,6 +9,8 @@
         android:id="@+id/imageView2"
         android:layout_width="88dp"
         android:layout_height="99dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="16dp"
