--- a/GameNavigation/app/src/main/res/layout/fragment_in_game.xml
+++ b/GameNavigation/app/src/main/res/layout/fragment_in_game.xml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E6165D"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".InGameFragment">
+<TextView
+    android:text="IN Game"
+    android:layout_width="wrap_content"
+    android:textSize="40sp"
+    android:textStyle="bold"
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    android:textColor="@color/colorAccent"
+   app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    android:layout_height="wrap_content">
 
-</FrameLayout>
+</TextView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
